[package]
name = "nclist"
description = "Crate for finding overlapping intervals using a nested containment list"
version = "0.1.0"
license = "MIT"
authors = ["Arno Velds <a.velds@nki.nl>"]
readme = "README.md"
repository = "https://github.com/veldsla/nclist"
homepage = "https://github.com/veldsla/nclist"
documentation = "https://docs.rs/nclist/"
keywords = ["nclist", "interval", "range", "overlap"]
edition = "2018"

[dependencies]
itertools = "0.8.2"

[dev-dependencies]
criterion = "0.3.1"
rand = "0.7.3"

[[bench]]
name = "bench"
harness = false
